--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   webview_flutter:
   url_launcher:
   http:
+  json_serializable:
 #  video_player:
 #  shared_preferences:
 #  share:
