--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,12 +16,12 @@ dependencies:
   webview_flutter:
   url_launcher:
   http:
-#  video_player:
+  video_player:
 #  shared_preferences:
 #  share:
 #  sensors:
 #  quick_actions:
-#  path_provider:
+  path_provider:
 #  image_picker:
 #  google_sign_in:
 #  package_info:
@@ -48,6 +48,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+    - assets/video/
 
   fonts:
     - family: FangZhengFangSongJianTi
