--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_markdown:
   dartdoc:
   cached_network_image:
+  web_socket_channel:
 
 dev_dependencies:
   flutter_test:
