--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,32 @@ os:
 sudo: false
 addons:
   apt:
-    # Flutter depends on /usr/lib/x86_64-linux-gnu/libstdc++.so.6 version GLIBCXX_3.4.18
     sources:
-      - ubuntu-toolchain-r-test # if we don't specify this, the libstdc++6 we get is the wrong version
+      - ubuntu-toolchain-r-test
     packages:
       - libstdc++6
+      - fonts-droid
+git:
+  depth: 3
+env:
+  - FLUTTER_VERSION=stable
+  - FLUTTER_VERSION=beta
+matrix:
+  allow_failures:
+    - env: FLUTTER_VERSION=beta
 before_script:
-  - git clone https://github.com/flutter/flutter.git -b stable
+  - git clone https://github.com/flutter/flutter.git -b $FLUTTER_VERSION
   - ./flutter/bin/flutter doctor
-#script:
-#  - ./flutter/bin/flutter test
+  - chmod +x travis_script.sh
+script:
+  - ./travis_script.sh
 cache:
   directories:
-    - $HOME/.pub-cache
+    - $HOME/shared/.pub-cache
+notifications:
+  email:
+    jiangkang0504@163.com
+
+# Only building master means that we don't run two builds for each pull request.
+branches:
+  only: [master]
