--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-
+  provider:
   cupertino_icons: ^0.1.2
   webview_flutter:
   url_launcher:
