换一种方式实现深色模式

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,8 @@
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+/.idea/
+/android/.idea/
+/android/.idea/
+/android/android.iml
+/.idea/libraries/
