--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
     ext.kotlin_version = '1.3.72'
+    ext.lottieVersion = "3.4.1"
     repositories {
         google()
         jcenter()
