--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:windowSoftInputMode="adjustResize">
             <meta-data
                 android:name="io.flutter.app.android.SplashScreenUntilFirstFrame"
-                android:value="false" />
+                android:value="true" />
 <!--            <meta-data-->
 <!--                android:name="io.flutter.embedding.android.SplashScreenDrawable"-->
 <!--                android:resource="@drawable/splash_screen"-->
