--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -4,17 +4,22 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-java@v1
+    - uses: actions/checkout@v2
+    - name: Setup Java JDK
+      uses: actions/setup-java@v1.3.0
       with:
         java-version: '12.x'
     - uses: subosito/flutter-action@v1
       with:
-       channel: 'stable' # or: 'dev' or 'beta'
+       channel: 'master' # or: 'dev' or 'beta'
+    - run: flutter doctor
     - run: flutter pub get
-    - run: flutter build apk
+    - run: flutter build apk --debug
+    - name: Release apk
+      uses: ncipollo/release-action@v1.5.0
+      with:
+       artifacts: "build/app/outputs/apk/release/*.apk"
+       token: ${{ secrets.FLUTTER_CI }}
     
