--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -1,10 +1,6 @@
-name: Flutter CI
+name: Flutter BUILD
 
 on: [push]
-# on:
-#   push:
-#     tags:
-#       - v*
 
 jobs:
   build:
@@ -21,9 +17,4 @@ jobs:
     - run: flutter doctor
     - run: flutter pub get
     - run: flutter build apk --debug
-    - name: Release apk
-      uses: ncipollo/release-action@v1.5.0
-      with:
-       artifacts: "build/app/outputs/apk/debug/*.apk"
-       token: ${{ secrets.FLUTTER_CI }}
     
