--- a/kicons/pubspec.yaml
+++ b/kicons/pubspec.yaml
@@ -2,7 +2,7 @@ name: kicons
 description: An Icon package project,you can use many icons which you like.Then,you can list all of the icons quickly!
 version: 1.0.2
 author: jiangkang<jiangkang0504@gmail.com>
-homepage: https://jiangkang.tech
+homepage: https://www.jiangkang.tech
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
