--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,6 +28,7 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 android {
     ndkVersion "21.3.6528147"
     compileSdkVersion 30
+    buildToolsVersion '30.0.3'
 
     lintOptions {
         disable 'InvalidPackage'
