--- a/kicons/pubspec.yaml
+++ b/kicons/pubspec.yaml
@@ -1,7 +1,6 @@
 name: kicons
 description: An Icon package project,you can use many icons which you like.Then,you can list all of the icons quickly!
 version: 1.0.2
-author: jiangkang<jiangkang0504@gmail.com>
 homepage: https://www.jiangkang.tech
 
 environment:
@@ -14,6 +13,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^1.0.4
 
 flutter:
   fonts:
