--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: Learn Flutter System
 version: 0.0.1
 
 environment:
-  sdk: ">=2.2.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 # ^0.1.1 则版本应该为0.1.x , x >=1
 # '0.1.1' 指定版本
@@ -43,7 +43,7 @@ dependencies:
   sqflite: ^2.0.1
   path: ^1.8.0
   source_gen: ^1.2.0
-  flutter_dynamic_ui: ^0.2.0
+  flutter_dynamic_ui: ^0.3.0
 
 
 dev_dependencies:
