--- a/best_toast/pubspec.yaml
+++ b/best_toast/pubspec.yaml
@@ -5,12 +5,12 @@ homepage: https://www.jiangkang.tech
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=2.5.0 <3.0.0"
+  flutter: ">=3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_lints: ^1.0.4
+  flutter_lints:
 
 dev_dependencies:
   flutter_test:
