--- a/kicons/pubspec.yaml
+++ b/kicons/pubspec.yaml
@@ -5,6 +5,7 @@ homepage: https://www.jiangkang.tech
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
+  flutter: ">=3.0.0"
 
 dependencies:
   flutter:
@@ -13,7 +14,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.4
+  flutter_lints:
 
 flutter:
   fonts:
