--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ version: 0.0.1
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
+  flutter: ">=3.0.0"
 
 # ^0.1.1 则版本应该为0.1.x , x >=1
 # '0.1.1' 指定版本
@@ -17,18 +18,18 @@ dependencies:
     path: best_toast
   flutter_localizations:
     sdk: flutter
-  provider: ^6.0.1
-  cupertino_icons: ^1.0.4
-  webview_flutter: ^3.0.0
-  url_launcher: ^6.0.17
-  http: ^0.13.4
-  video_player: ^2.2.7
-  shared_preferences: ^2.0.10
-  share: ^2.0.4
+  provider:
+  cupertino_icons:
+  webview_flutter:
+  url_launcher:
+  http:
+  video_player:
+  shared_preferences:
+  share:
 #  sensors:
 #  quick_actions:
-  path_provider: ^2.0.8
-  image_picker: ^0.8.4+4
+  path_provider:
+  image_picker:
 #  google_sign_in:
 #  package_info:
 #  local_auth:
@@ -38,17 +39,17 @@ dependencies:
 #  connectivity:
 #  camera: ^0.5.8+11
 #  battery:
-  flutter_markdown: ^0.6.8
-  web_socket_channel: ^2.1.0
-  sqflite: ^2.0.1
-  path: ^1.8.0
-  source_gen: ^1.2.0
+  flutter_markdown:
+  web_socket_channel:
+  sqflite:
+  path:
+  source_gen:
 #  flutter_dynamic_ui: ^0.3.0
 
 
 dev_dependencies:
   build_runner: ^2.1.5
-  flutter_lints: ^1.0.4
+  flutter_lints: ^2.0.1
 
 flutter:
   uses-material-design: true
