--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,6 +3,8 @@ description: Learn Flutter System
 
 version: 0.0.1
 
+publish_to: none
+
 environment:
   sdk: '>=2.12.0 <3.0.0'
   flutter: ">=3.0.0"
